<resources>
    <string name="app_name">Book Nest</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="ratings">Ratings</string>
    <string name="pages">Pages</string>
    <string name="published_year">Published Year</string>
    <string name="cover_image">Cover Image</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="link_to_purchase">Link to Purchase</string>
    <string name="share">Share</string>
    <string name="rezky_aditia_fauzan">Rezky Aditia Fauzan</string>
    <string name="rezkyaf246_gmail_com">rezkyaf246@gmail.com</string>
    <string name="visit_dicoding_profile">Visit Dicoding Profile</string>
    <string name="about">About</string>
    <string name="slash_logo">Slash Logo</string>
    <string-array name="data_title">
        <item>Gödel, Escher, Bach: An Eternal Golden Braid</item>
        <item>Sapiens: A Brief History of Humankind</item>
        <item>Thinking, Fast and Slow</item>
        <item>The Selfish Gene</item>
        <item>The Immortal Life of Henrietta Lacks</item>
        <item>A Brief History of Time</item>
        <item>Why We Sleep: Unlocking the Power of Sleep and Dreams</item>
        <item>Cosmos</item>
        <item>Guns, Germs, and Steel: The Fates of Human Societies</item>
        <item>Night</item>
        <item>The Stranger</item>
        <item>The Alchemist</item>
        <item>The Subtle Art of Not Giving a F*ck: A Counterintuitive Approach to Living a Good Life</item>
        <item>Entangled Life: How Fungi Make Our Worlds, Change Our Minds and Shape Our Futures</item>
        <item>What If?: Serious Scientific Answers to Absurd Hypothetical Questions</item>
        <item>Humble Pi: A Comedy of Maths Errors</item>
        <item>Pandora\'s Lab: Seven Stories of Science Gone Wrong</item>
        <item>Stiff: The Curious Lives of Human Cadavers</item>
        <item>This Is Your Mind on Plants</item>
    </string-array>
    <string-array name="data_author">
        <item>Douglas R. Hofstadter</item>
        <item>Yuval Noah Harari</item>
        <item>Daniel Kahneman</item>
        <item>Richard Dawkins</item>
        <item>Rebecca Skloot</item>
        <item>Stephen Hawking</item>
        <item>Matthew Walker</item>
        <item>Carl Sagan</item>
        <item>Jared Diamond</item>
        <item>Elie Wiesel, Marion Wiesel (Translator), François Mauriac (Foreword)</item>
        <item>Albert Camus, Matthew Ward (Translator)</item>
        <item>Paulo Coelho</item>
        <item>Mark Manson</item>
        <item>Merlin Sheldrake</item>
        <item>Randall Munroe</item>
        <item>Matt Parker</item>
        <item>Paul A. Offit</item>
        <item>Mary Roach</item>
        <item>Michael Pollan</item>
    </string-array>
    <string-array name="data_published_year">
        <item>1979</item>
        <item>2011</item>
        <item>2011</item>
        <item>1976</item>
        <item>2010</item>
        <item>1988</item>
        <item>2017</item>
        <item>1980</item>
        <item>1997</item>
        <item>1956</item>
        <item>1942</item>
        <item>1988</item>
        <item>2016</item>
        <item>2020</item>
        <item>2014</item>
        <item>2019</item>
        <item>2017</item>
        <item>2003</item>
        <item>2021</item>
    </string-array>
    <string-array name="data_genre">
        <item>Science, Nonfiction, Philosophy, Mathematics, Psychology, Music, Computer Science</item>
        <item>Nonfiction, History, Science, Audiobook, Philosophy, Anthropology, Psychology</item>
        <item>Nonfiction, Psychology, Self Help, Business, Personal Development, Philosophy, Audiobook</item>
        <item>Science, Nonfiction, Biology, Evolution, Philosophy, Psychology, Popular Science</item>
        <item>Nonfiction, Science, History, Biography, Audiobook, Medicine, Medical</item>
        <item>Science, Nonfiction, Physics, History, Classics, Astronomy, Philosophy</item>
        <item>Nonfiction, Science, Health, Psychology, Self Help, Audiobook, Neuroscience</item>
        <item>Science, Nonfiction, Physics, Astronomy, History, Space, Philosophy</item>
        <item>History, Nonfiction, Science, Anthropology, Sociology, Politics, Economics</item>
        <item>Nonfiction, Classics, Memoir, Holocaust, Biography, School, Historical</item>
        <item>Classics, Fiction, Philosophy, France, Literature, Novels, French Literature</item>
        <item>Fiction, Fantasy, Philosophy, Novels, Self Help, Spirituality, Audiobook</item>
        <item>Nonfiction, Self Help, Psychology, Audiobook, Personal Development, Philosophy, Business</item>
        <item>Nonfiction, Science, Nature, Biology, Audiobook, Environment, Ecology</item>
        <item>Nonfiction, Science, Humor, Audiobook, Physics, Comedy, Popular Science</item>
        <item>Nonfiction, Science, Mathematics, Humor, Audiobook, History, Popular Science</item>
        <item>Science, Nonfiction, History, Audiobook, Medicine, Medical, Health</item>
        <item>Nonfiction, Science, Audiobook, Humor, Medical, Medicine, Death</item>
        <item>Nonfiction, Science, Audiobook, Psychology, Nature, Health, History</item>
    </string-array>
</resources>