<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    card_view:cardBackgroundColor="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginVertical="8dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="0dp"
            android:contentDescription="@string/cover_image"
            tools:contentDescription="@string/cover_image"
            card_view:layout_constraintDimensionRatio="3:4"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/img_item_photo"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="@id/img_item_photo"
            card_view:layout_constraintStart_toStartOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/img_item_photo"
            tools:text="@string/book_name" />

        <TextView
            android:id="@+id/tv_item_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/book_author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>